Increase batch requests, and other adjustments

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "like-ethers",
   "version": "1.0.0",
-  "description": "",
+  "description": "Ethereum library for Node.js",
   "main": "index.js",
   "files": [
     "lib/*"
